# Nand2Tetris

./: .gitignore  LICENSE
.claude/agents/: cpp-stuck-point-analyzer.md
.claude/skills/cpp-best-practice/: SKILL.md
.claude/skills/teach-programming/: SKILL.md
1/: And.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
10/jack_analyzer/: Cargo.toml
10/jack_analyzer/src/: cli.rs  lib.rs  main.rs  tokenizer.rs
2/: ALU.hdl  Add16.hdl  FullAdder.hdl  HalfAdder.hdl  Inc16.hdl  Neg.hdl  Or16Way.hdl
3/a/: Bit.hdl  Or8.hdl  PC.hdl  RAM64.hdl  RAM8.hdl  Register.hdl
3/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
4/fill/: Fill.asm
4/mult/: Mult.asm
5/: CPU.hdl  Computer.hdl  Memory.hdl
6/asm/: CMakeLists.txt  code.cpp  code.h  hackasm.cpp  parser.cpp  parser.h  symbol_table.cpp  symbol_table.h
6/asm/test/: CMakeLists.txt  tst_code.cpp  tst_parser.cpp  tst_symbol_table.cpp
7/: BasicTest.asm
7/StackArithmetic/SimpleAdd/: SimpleAdd.asm
7/StackArithmetic/StackTest/: StackTest.asm
7/vm/: CMakeLists.txt  code_writer.cpp  code_writer.h  parser.cpp  parser.h  vm.cpp
7/vm/test/: CMakeLists.txt  tst_parser.cpp
8/FunctionCalls/FibonacciElement/: FibonacciElement.asm
8/FunctionCalls/SimpleFunction/: SimpleFunction.asm
8/FunctionCalls/StaticsTest/: StaticsTest.asm
8/ProgramFlow/BasicLoop/: BasicLoop.asm
8/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
8/vm/: CMakeLists.txt  code_writer.cpp  code_writer.h  parser.cpp  parser.h  vm.cpp
8/vm/test/: CMakeLists.txt  tst_parser.cpp
